--- a/src/Style/style.css
+++ b/src/Style/style.css
@@ -1,158 +1,198 @@
 body {
-    color: #aaa;
-    line-height: 1.5;
-    font-size: 18px;
+  color: #aaa;
+  line-height: 1.5;
+  font-size: 18px;
+}
+
+.mb-150 {
+  margin-bottom: 150px;
 }
 
 a {
-    color: #aaa;
+  color: #aaa;
 }
 
 a:hover {
-        color: #9bcc9b;
-    }
+  color: #9bcc9b;
+}
 
 .container:after {
-    clear: both;
+  clear: both;
 }
 
 .border-test {
-    border: 1px solid black;
+  border: 1px solid black;
 }
-
+.conduit-text {
+  font-size: 30px;
+  font-weight: 600;
+}
 .font-color-green {
-    color: #5cb85c;
+  color: #5cb85c;
 }
 
 .background-color-green {
-    background-color: #5cb85c;
+  background-color: #5cb85c;
 }
 
 .background-color-gray {
-    background-color: #f3f3f3;
+  background-color: #f3f3f3;
 }
 
 .title-color-white {
-    color: white;
+  color: white;
 }
 
 .font-title {
-    font-weight: 700 !important;
-    /*text-align: center;*/
-    font-size: 3.5rem;
+  font-weight: 700 !important;
+  /*text-align: center;*/
+  font-size: 3.5rem;
 }
 
 .title-slogan {
-    /*text-align: center;*/
-    font-size: 1.5rem;
-    font-weight: 300 !important;
-    margin-bottom: 50px;
+  /*text-align: center;*/
+  font-size: 1.5rem;
+  font-weight: 300 !important;
+  margin-bottom: 50px;
 }
 
 .avatar {
-    display: inline-block;
-    vertical-align: middle;
-    height: 32px;
-    width: 32px;
-    border-radius: 30px;
+  display: inline-block;
+  vertical-align: middle;
+  height: 32px;
+  width: 32px;
+  border-radius: 30px;
 }
 
 .tag button {
-    color: white;
-    background-color: #818a91;
-    border-radius: 10px;
-    padding: 5px;
-    margin: 3px;
-    display: inline-block;
+  color: white;
+  background-color: #818a91;
+  border-radius: 10px;
+  padding: 5px;
+  margin: 3px;
+  display: inline-block;
 }
 
-    .tag button:hover {
-        background-color: #5b6369;
-    }
+.tag button:hover {
+  background-color: #5b6369;
+}
 
 .box-infor-owner div {
-    float: left;
+  float: left;
 }
 
 .article-preview {
-    border-top: 1px solid #aaa;
-    padding: 20px 0px 0px 10px;
-    margin: 5px;
+  border-top: 1px solid #aaa;
+  padding: 20px 0px 0px 10px;
+  margin: 5px;
 }
 
 .tag-list li {
-    list-style-type: none;
-    float: right;
-    margin-left: 10px;
-    padding: 2px;
-    border: 1px solid #aaa;
-    border-radius: 10px;
-    font-size: 0.8rem;
+  list-style-type: none;
+  float: right;
+  margin-left: 10px;
+  padding: 2px;
+  border: 1px solid #aaa;
+  border-radius: 10px;
+  font-size: 0.8rem;
 }
 
 .color-title-posting {
-    color: black;
-    font-weight: 600 !important;
-    font-size: 1.5rem !important;
-    margin-bottom: 3px;
+  color: black;
+  font-weight: 600 !important;
+  font-size: 1.5rem !important;
+  margin-bottom: 3px;
 }
 
 .footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background: linear-gradient(#485563, #29323c);
-    padding: 15px;
-    box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.4);
-    z-index: 999;
-    text-align: center;
-    display: block;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background: linear-gradient(#485563, #29323c);
+  padding: 15px;
+  box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.4);
+  z-index: 999;
+  text-align: center;
+  display: block;
 }
 
-    .footer a {
-        color: #fff;
-        font-size: 1.5rem;
-    }
-    .pagination {
-        display: inline-block;
-        padding-left: 0;
-        margin-top: 1rem;
-        margin-bottom: 1rem;
-        border-radius: .25rem;
-    }
-    .page-item {
-        display: inline;
-    }
-    .page-item:first-child .page-link {
-    margin-left: 0;
-    border-bottom-left-radius: .25rem;
-    border-top-left-radius: .25rem;
+.footer a {
+  color: #fff;
+  font-size: 1.5rem;
+}
+
+.pagination {
+  display: inline-block;
+  padding-left: 0;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border-radius: 0.25rem;
+}
+
+.page-item {
+  display: inline;
+}
+
+.page-item:first-child .page-link {
+  margin-left: 0;
+  border-bottom-left-radius: 0.25rem;
+  border-top-left-radius: 0.25rem;
 }
 
 .page-link {
-    position: relative;
-    float: left;
-    padding: .5rem .75rem;
-    margin-left: -1px;
-    color: #5cb85c;
-    text-decoration: none;
-    background-color: #fff;
-    border: 1px solid #ddd;
+  position: relative;
+  float: left;
+  padding: 0.5rem 0.75rem;
+  margin-left: -1px;
+  color: #5cb85c;
+  text-decoration: none;
+  background-color: #fff;
+  border: 1px solid #ddd;
 }
+
 .backgorund-loading {
-    position: fixed;
-    right: 0;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    z-index: 99;
-    background-color: rgb(170, 170, 170, 0.5);
+  position: fixed;
+  right: 0;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 99;
+  background-color: rgb(170, 170, 170, 0.5);
 }
+
 .icon-loading {
-    position: fixed;
-    margin-left: auto;
-    margin-right: auto;
-    top: 30%;
-    left: 30%;
-    width: 200
+  position: fixed;
+  margin-left: auto;
+  margin-right: auto;
+  top: 30%;
+  left: 30%;
+  width: 200;
+}
+/* Style for posting detail */
+
+.banner-detail-posting {
+  color: #fff;
+  background: #333;
+}
+
+p.content-detail-posting {
+  font-family: "source serif pro", serif;
+  font-size: 25px;
+  line-height: 1.8rem;
+}
+
+.card {
+  position: relative;
+  display: block;
+  margin-bottom: 0.75rem;
+  background-color: #fff;
+  border-radius: 0.25rem;
+}
+
+.card-footer {
+  padding: 0.75rem 1.25rem;
+  background-color: #f5f5f5;
+}
+.text-right {
+  float: right;
 }
